# ragstrap

./: .gitignore  LICENSE  README.md  pyproject.toml
ragstrap/: __init__.py  cli.py
ragstrap/cli_capture/: policy.py  rust.py
ragstrap/cli_detect/: rust.py
ragstrap/examples/: extract.py  harvest.py
ragstrap/fetch/: github.py  github_archive.py
ragstrap/index/: generate.py  language.py
ragstrap/util/: github.py  ignore.py
